# Automated-Traffic-Management

./: CMakeLists.txt  README.md  main.cpp  schema.sql
project/: manage.py
project/project_gateway/: settings.py  urls.py  wsgi.py
project/project_gateway/__pycache__/: wsgi.py
project/traffic_api/: urls.py  views.py
